# codex-opencode-adapter

./: .gitignore  AGENTS.md  Cargo.toml  NOTICE  P0_STREAMING_TOOL_CALLS_PATCH.md  P2_CONNECTOR_LIMITATION.md  P2_DRAFT_STATUS.md  P2_HISTORY_HARDENING.md  P2_HISTORY_HARDENING_NOTE.md  README.md  codex-subagent-smoke.jsonl  codex-subagent-tool-smoke.jsonl  config.toml.example
.codex-opencode/: state.sqlite
docs/: COMPATIBILITY.md  DIAGNOSTICS.md  INDEX.md  README.md  REAL_VALIDATION_2026-06-25.zh-CN.md  ROADMAP.md  USAGE.zh-CN.md  VALIDATION.zh-CN.md  codex-opencode-adapter-handoff-todolist.md  p0-stateless-tool-continuation.md  p1-continuation-diagnostics.md  p1-nonstream-upstream-error.md  p1-stream-content-tool-buffer.md  p2-config-doc-sync.md  p3-lite-real-validation-checklist.md
scripts/: check-local-adapter.ps1  clear-state.ps1  dev-run.ps1  install-user-provider.ps1  run-real-smoke.ps1
src/: cli.rs  codex_chat_history.rs  config.rs  init.rs  lib.rs  main.rs  media_guard.rs  project.rs  server.rs  state.rs  upstream.rs
tests/: cli_distribution_flow.rs  codex_chat_history_hardening.rs  concurrency_limit_regression.rs  conversion_rs.rs  e2e_basic.rs  e2e_errors.rs  e2e_multi_project.rs  e2e_real_smoke.rs  e2e_reasoning.rs  e2e_tool_call.rs  e2e_validation.rs  multimodal_regression.rs  nonstream_upstream_error_regression.rs  reasoning_block_regression.rs  regression_conversion.rs  state_store.rs  stateless_tool_continuation.rs  stream_content_tool_buffer.rs  stream_tool_delta_regression.rs  test_conversion_modules.py  test_e2e.rs  tool_call_adoption.rs  (+1 more)
(+22 files in other folders)
